luci-theme: alignment fixes
These help to align read-only items with their title elements.

--- a/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
+++ b/themes/luci-theme-material/htdocs/luci-static/material/cascade.css
@@ -1257,6 +1257,7 @@ td > table > tbody > tr > td,
 	display: inline-block;
 	width: 100%;
 	padding: .35rem 1rem .2rem 1rem;
+	align-items: baseline;
 }
 
 .cbi-value ul {
