--- a/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
+++ b/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
@@ -1123,6 +1123,7 @@ textarea {
 	display: flex;
 	flex-wrap: wrap;
 	margin: 0 0 1em 0;
+	align-items: baseline;
 }
 
 .cbi-value > label:first-child {
